k8s/hml-nginx-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hml-nginx-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: hmlnginx
  ports:
    - port: 80
      targetPort: 80
