k8s/hml-zuul-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  selector:
    component: api-gateway
  ports:
    - port: 8888
      targetPort: 8888
