k8s/hmllog-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-log
spec:
  type: ClusterIP
  selector:
    component: homework-log
  ports:
    - port: 9001
      targetPort: 9001
