k8s/mysql-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldata
spec:
  type: ClusterIP
  selector:
    component: mysqldata
  ports:
    - port: 3306
  clusterIP: None
