k8s/naming-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hmlnaming
spec:
  type: ClusterIP
  selector:
    component: hmlnaming
  ports:
    - port: 8763
      targetPort: 8763
