k8s/ron-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ron-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: hmlron
  ports:
    - port: 9000
      targetPort: 9000
